fixed scrollbar issue

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -131,7 +131,7 @@ a:link {
 
 .menu li:first-child {
   line-height: 20px;
-  width: 75%;
+  width: 180px;
   height: 72px;
   display: block;
   margin-right: auto;
