--- a/app/assets/stylesheets/comments.scss
+++ b/app/assets/stylesheets/comments.scss
@@ -63,7 +63,7 @@
   background: white;
   height: 100%;
   width: 15%;
-  overflow: scroll;
+  overflow: auto;
   position: fixed;
 }
 
@@ -127,7 +127,7 @@ input#search {
   margin-top: 117px;
   background-color: white;
   border-bottom: 4.5px solid #F5F5F5;
-  overflow: scroll;
+  overflow: auto;
 }
 
 #name-font {
@@ -308,13 +308,12 @@ i.title.fa.fa-user {
 
 .about_container {
   width: 405px;
-  height: 153px;
+  height: 200px;
   text-align: left;
   margin-left: 27px;
   word-wrap: break-word;
   color: #888888;
   line-height: 20.7px;
-  overflow: scroll;  
 }
 
 
