--- a/app/assets/stylesheets/hire_type_boards.scss
+++ b/app/assets/stylesheets/hire_type_boards.scss
@@ -10,13 +10,14 @@
   width: 100%;
   height: 100%;
   position: absolute;
+  overflow: hidden;
 }
 
 .questions_container {
   width: 100%;
   height: 81%;
   margin-top: 98px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .questions_container a:link {
